[package]
name = "bevy_fancy_cursor"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tomasz Nehring"]
repository = "github.com/siiir/bevy_fancy_cursor"

[dependencies]
bevy = {version = "0.9.1"}
derive_more = "0.99.17"

[profile.dev]
opt-level= 1
[profile.dev.package."*"]
opt-level= 3
