[package]
# About
name = "siiir-bevy_fancy_cursor"
description = "Facilitates creating custom cursor in bevy-based app. Uses bevy's `ImageBundle` to replace the original cursor with moving UI element."
# Ownership
authors = ["Tomasz Nehring"]
license = "MIT"
# Versioning
version = "0.4.0"
edition = "2021"
# Websites
homepage = "https://github.com/siiir/bevy_fancy_cursor"
repository = "https://github.com/siiir/bevy_fancy_cursor"
documentation = "https://docs.rs/siiir-bevy_fancy_cursor/latest/bevy_fancy_cursor/"

[lib]
name = "bevy_fancy_cursor"

[dependencies]
bevy = {version = "0.9.1"}
derive_more = "0.99.17"

[profile.dev]
opt-level= 1
[profile.dev.package."*"]
opt-level= 3
